--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    </style>
 <style>
 body {
-  background-image: url('https://i.imgur.com/vWZMIph.jpg');
+  background-image: url('https://i.imgur.com/JPA70dD.jpeg');
 }
 </style>
 <center>
@@ -25,7 +25,7 @@ body {
 </center>
 <center><a href="https://www.pexels.com/@melvin-binesh-756164389/">My Pexels</a></center>
 <center><a href="https://on.soundcloud.com/syMQ8JMw7wj83xMZ8">Favorite Music "The Voyage" by Haywyre</a></center>
-<center><a href="https://github.com/xemulat/XToolbox">XToolbox by Xemulat</a></center>
+<center><a href="https://git.gay/n">XToolbox by Xemulat</a></center>
 <center><a href="https://pixel31.github.io/">Pixel Toolbox by Pixel</a></center>
 <center><a href="https://github.com/AlanFinotty/AAFOptimusDCHAudio-Realtek/releases">Realtek Audio Driver Mod by Alan Finotty</a></center>
 
