--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    </style>
 <style>
 body {
-  background-image: url('https://i.imgur.com/JPA70dD.jpeg');
+  background-image: url('https://i.imgur.com/sxln3Lp.jpeg');
 }
 </style>
 <center>
