--- a/index.html
+++ b/index.html
@@ -37,6 +37,17 @@
     </style>
 </head>
 <body>
+ <div class="resources-container">
+ <h2>Resources & Tools</h2>
+ <div class="resources-grid">
+     <a href="https://dl.malwarewatch.org/"> Software and Archive by Enderman</a>
+        <a href="https://git.gay/n" target="_blank">🛠 XToolbox by Xemulat</a>
+        <a href="https://pixel31.github.io/" target="_blank">🖼 Pixel Toolbox by Pixel</a>
+        <a href="https://github.com/AlanFinotty/AAFOptimusDCHAudio-Realtek/releases" target="_blank">🎧 Realtek Audio Driver Mod</a>
+        <a href="https://github.com/AlanFinotty/AAFOptimusDCHAudio-Generic" target="_blank">🎼 Generic Audio Driver Mod</a>
+    </div>
+</div>
+
 
 <div class="container">
     <h1>About Me</h1>
