--- a/index.html
+++ b/index.html
@@ -6,6 +6,44 @@
     <title>About Melvin</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
+        .resources-container {
+    background: rgba(0, 0, 0, 0.6);
+    padding: 20px;
+    border-radius: 10px;
+    max-width: 600px;
+    margin: auto;
+    box-shadow: 0px 4px 10px rgba(0,0,0,0.5);
+    text-align: center;
+}
+
+.resources-container h2 {
+    color: #ffcc00;
+    font-size: 24px;
+    margin-bottom: 15px;
+}
+
+.resources-grid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+}
+
+.resources-grid a {
+    background: #333;
+    color: white;
+    padding: 10px 15px;
+    border-radius: 5px;
+    text-decoration: none;
+    font-size: 16px;
+    transition: all 0.3s ease-in-out;
+}
+
+.resources-grid a:hover {
+    background: #ffcc00;
+    color: black;
+}
+
         body {
             font-family: 'Poppins', sans-serif;
             background-image: url('https://i.imgur.com/Hog0EKH.jpeg');
