--- a/index.html
+++ b/index.html
@@ -80,8 +80,9 @@
      <a href="https://dl.malwarewatch.org/"> Software and Archive by Enderman</a>
         <a href="https://git.gay/n" target="_blank">🛠 XToolbox by Xemulat</a>
         <a href="https://pixel31.github.io/" target="_blank">🖼 Pixel Toolbox by Pixel</a>
-        <a href="https://github.com/AlanFinotty/AAFOptimusDCHAudio-Realtek/releases" target="_blank">🎧 Realtek Audio Driver Mod</a>
-        <a href="https://github.com/AlanFinotty/AAFOptimusDCHAudio-Generic" target="_blank">🎼 Generic Audio Driver Mod</a>
+        <a href="https://reunion7.com/index.html" target="_blank"> 🪟 Windows 7 </a>
+        <a href="https://eaglercraft.com/" target="_blank">🎮 Online Minecraft</a>
+         <a href="https://webamp.org/"> WebAmp</a>
     </div>
 </div>
 
