--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <div class="container">
     <h1>About Me</h1>
-    <p><strong>Name:</strong> Melvin</p>
+    <p><strong>Name:</strong> Melvin Binesh</p>
     <p><strong>Bio:</strong> Photographer, IT Enthusiast</p>
 
     <h2>Links</h2>
