--- a/index.html
+++ b/index.html
@@ -47,9 +47,20 @@
     <p><a href="https://www.pexels.com/@melvin-binesh-756164389/">My Pexels</a></p>
     <p><a href="https://on.soundcloud.com/syMQ8JMw7wj83xMZ8">Favorite Music</a></p>
 
-    <p>Website Version: 0.2.2 (Alpha)</p>
+    <p>Website Version: 1.0 (Stable)</p>
     <p>Contact: <a href="mailto:melvin.bt09@icloud.com">melvin.bt09@icloud.com</a></p>
+    <div class="links-container">
+    <h2>Resources & Tools</h2>
+    <div class="links-grid">
+        <a href="https://www.pexels.com/@melvin-binesh-756164389/" target="_blank">📷 My Pexels</a>
+        <a href="https://on.soundcloud.com/syMQ8JMw7wj83xMZ8" target="_blank">🎵 Favorite Music</a>
+        <a href="https://git.gay/n" target="_blank">🛠 XToolbox by Xemulat</a>
+        <a href="https://pixel31.github.io/" target="_blank">🖼 Pixel Toolbox by Pixel</a>
+        <a href="https://github.com/AlanFinotty/AAFOptimusDCHAudio-Realtek/releases" target="_blank">🎧 Realtek Audio Driver Mod</a>
+        <a href="https://github.com/AlanFinotty/AAFOptimusDCHAudio-Generic" target="_blank">🎼 Generic Audio Driver Mod</a>
+    </div>
 </div>
+
 
 </body>
 </html>
