--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
         <a href="https://on.soundcloud.com/syMQ8JMw7wj83xMZ8" target="_blank">🎵 Favorite Music</a>
         <a href="https://git.gay/n" target="_blank">🛠 XToolbox by Xemulat</a>
         <a href="https://pixel31.github.io/" target="_blank">🖼 Pixel Toolbox by Pixel</a>
-        <a href="https://github.com/AlanFinotty/AAFOptimusDCHAudio-Realtek/releases" target="_blank">🎧 Realtek Audio Driver Mod</a>
-        <a href="https://github.com/AlanFinotty/AAFOptimusDCHAudio-Generic" target="_blank">🎼 Generic Audio Driver Mod</a>
+        <a href="https://dl.malwarewatch.org/" target="_blank"> Software and Archive</a>
+        <a href="https://eaglercraft.com/" target="_blank"> Minecraft Online</a>
     </div>
 </div>
 
