--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
     <h2>Links</h2>
     <p><a href="https://www.pexels.com/@melvin-binesh-756164389/">My Pexels</a></p>
     <p><a href="https://on.soundcloud.com/syMQ8JMw7wj83xMZ8">Favorite Music</a></p>
+    <p><a href="https://instagram.com/blu.erries">My Instagramc</a></p>
 
     <p>Website Version: 1.0 (Stable)</p>
     <p>Contact: <a href="mailto:melvin.bt09@icloud.com">melvin.bt09@icloud.com</a></p>
