--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>About Melvin</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
-/* Existing CSS */
+/* General Body & Container Styles */
 body {
     font-family: 'Poppins', sans-serif;
     background-image: url('https://i.imgur.com/Hog0EKH.jpeg');
@@ -16,12 +16,13 @@ body {
     color: white;
     text-align: center;
     padding: 20px;
-    min-height: 100vh; /* Ensure body takes full height for centering */
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: center; /* Center content vertically */
-    align-items: center; /* Center content horizontally */
+    justify-content: center;
+    align-items: center;
 }
+
 .container {
     background: rgba(0, 0, 0, 0.6);
     padding: 20px;
@@ -29,17 +30,20 @@ body {
     max-width: 600px;
     margin: auto;
     box-shadow: 0px 4px 10px rgba(0,0,0,0.5);
-    position: relative; /* Needed for z-index and potential overlays */
-    z-index: 1; /* Ensure container is above other elements if any */
+    position: relative;
+    z-index: 1;
 }
+
 h1, p {
     margin: 10px 0;
 }
+
 a {
     color: #ffcc00;
     text-decoration: none;
     font-weight: bold;
 }
+
 a:hover {
     color: #ff9900;
 }
@@ -49,7 +53,7 @@ a:hover {
     padding: 20px;
     border-radius: 10px;
     max-width: 600px;
-    margin: 20px auto 0; /* Adjusted margin for spacing */
+    margin: 20px auto 0;
     box-shadow: 0px 4px 10px rgba(0,0,0,0.5);
     text-align: center;
 }
@@ -82,61 +86,12 @@ a:hover {
     color: black;
 }
 
-/* Contact Form Specific Styles */
-.contact-form {
-    text-align: left;
-    margin-top: 30px;
-    padding-top: 20px;
-    border-top: 1px solid rgba(255, 255, 255, 0.2);
-    position: relative; /* For the expanding card */
-    z-index: 1; /* To ensure it's above other elements if needed */
-}
-
-.contact-form h2 {
-    color: #ffcc00;
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-.contact-form label {
-    display: block;
-    margin-bottom: 5px;
-    font-weight: bold;
-    color: #ffcc00;
-}
-
-.contact-form input[type="text"],
-.contact-form input[type="email"],
-.contact-form textarea {
-    width: calc(100% - 22px);
-    padding: 10px;
-    margin-bottom: 15px;
-    border: 1px solid #555;
-    border-radius: 5px;
-    background-color: #333;
-    color: white;
-    font-family: 'Poppins', sans-serif;
-}
-
-.contact-form input[type="text"]:focus,
-.contact-form input[type="email"]:focus,
-.contact-form textarea:focus {
-    outline: none;
-    border-color: #ffcc00;
-    box-shadow: 0 0 5px rgba(255, 204, 0, 0.5);
-}
-
-.contact-form textarea {
-    resize: vertical;
-    min-height: 100px;
-}
-
-/* Styles for the Animated Contact Button and Card */
+/* Contact Button */
 .contact-button-wrapper {
     text-align: center;
     margin-top: 20px;
     position: relative;
-    z-index: 2; /* Make sure the button is above content initially */
+    z-index: 2;
 }
 
 #contactMeBtn {
@@ -148,90 +103,11 @@ a:hover {
     font-size: 18px;
     font-weight: bold;
     cursor: pointer;
-    transition: all 0.5s ease-in-out; /* Smooth transition for enlargement */
-    position: relative;
-    z-index: 3; /* Ensure button is on top */
+    transition: background 0.3s ease-in-out;
 }
 
-/* Initial state of the contact card - hidden and collapsed */
-#interactiveCard {
-    background: rgba(0, 0, 0, 0.9); /* Darker background for the card */
-    padding: 0; /* Start with no padding */
-    border-radius: 10px;
-    box-shadow: 0px 8px 20px rgba(0,0,0,0.8);
-    position: fixed; /* Fix it on the screen */
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(0); /* Start scaled to 0 */
-    opacity: 0; /* Start invisible */
-    width: 80%; /* Max width for the card */
-    max-width: 500px;
-    height: auto; /* Will expand with content */
-    z-index: 1000; /* High z-index to be on top of everything */
-    transition: transform 0.6s ease-out, opacity 0.6s ease-out, padding 0.6s ease-out; /* Smooth transitions */
-    overflow: hidden; /* Hide overflow during animation */
-    pointer-events: none; /* Make it unclickable when hidden */
-    text-align: center; /* Center content within card */
-}
-
-#interactiveCard.active {
-    transform: translate(-50%, -50%) scale(1); /* Scale to full size */
-    opacity: 1; /* Make visible */
-    padding: 30px; /* Expand padding */
-    pointer-events: auto; /* Make it clickable when active */
-}
-
-#interactiveCard h3 {
-    color: #ffcc00;
-    margin-bottom: 20px;
-    font-size: 28px;
-}
-
-#interactiveCard .card-content {
-    display: none; /* Hidden by default */
-    opacity: 0;
-    transition: opacity 0.3s ease-in;
-}
-
-#interactiveCard.active .card-content {
-    display: block; /* Show content when active */
-    opacity: 1;
-    transition-delay: 0.3s; /* Delay showing content until after scaling */
-}
-
-#interactiveCard .card-content p {
-    color: #ccc;
-    line-height: 1.6;
-    margin-bottom: 20px;
-}
-
-#interactiveCard .card-content .social-icons a {
-    display: inline-block;
-    margin: 0 10px;
-    color: white;
-    font-size: 30px;
-    transition: color 0.3s ease;
-}
-
-#interactiveCard .card-content .social-icons a:hover {
-    color: #ffcc00;
-}
-
-.close-card {
-    position: absolute;
-    top: 15px;
-    right: 20px;
-    color: white;
-    font-size: 30px;
-    cursor: pointer;
-    background: none;
-    border: none;
-    padding: 0;
-    transition: color 0.3s ease;
-}
-
-.close-card:hover {
-    color: #ffcc00;
+#contactMeBtn:hover {
+    background: #ff9900;
 }
 
 /* Overlay for background blur/darken */
@@ -241,17 +117,208 @@ a:hover {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.7); /* Semi-transparent black */
-    backdrop-filter: blur(5px); /* Blur effect */
-    z-index: 999; /* Below the card, above everything else */
+    background: rgba(0, 0, 0, 0.7);
+    backdrop-filter: blur(5px);
+    z-index: 999;
     opacity: 0;
-    pointer-events: none; /* Don't block clicks when hidden */
+    pointer-events: none;
     transition: opacity 0.6s ease;
 }
 
 .overlay.active {
     opacity: 1;
-    pointer-events: auto; /* Block clicks when active */
+    pointer-events: auto;
+}
+
+/* Flippable ID Card Styles */
+.flippable-card-container {
+    perspective: 1000px; /* Required for 3D effect */
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0.8); /* Start slightly smaller */
+    opacity: 0;
+    pointer-events: none;
+    z-index: 1000;
+    transition: transform 0.6s ease-out, opacity 0.6s ease-out; /* For appearing/disappearing */
+    width: 320px; /* Standard ID card width */
+    height: 500px; /* Standard ID card height */
+    max-width: 90%; /* Responsive sizing */
+    max-height: 90%;
+}
+
+.flippable-card-container.active {
+    transform: translate(-50%, -50%) scale(1);
+    opacity: 1;
+    pointer-events: auto;
+}
+
+.flippable-card {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    transform-style: preserve-3d; /* Keep children in 3D space */
+    transition: transform 0.8s ease-in-out; /* For the flip animation */
+    cursor: pointer;
+}
+
+.flippable-card.is-flipped {
+    transform: rotateY(180deg);
+}
+
+.card-face {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden; /* Hide the back of the element when facing away */
+    border-radius: 15px;
+    padding: 25px;
+    box-shadow: 0px 8px 25px rgba(0,0,0,0.8);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    box-sizing: border-box; /* Include padding in width/height */
+}
+
+.card-front {
+    background: linear-gradient(145deg, rgba(30, 30, 30, 0.9), rgba(50, 50, 50, 0.9));
+    border: 2px solid #ffcc00;
+}
+
+.card-back {
+    background: linear-gradient(145deg, rgba(30, 30, 30, 0.9), rgba(50, 50, 50, 0.9));
+    border: 2px solid #ffcc00;
+    transform: rotateY(180deg); /* Initially rotated to show back when flipped */
+    padding: 20px;
+}
+
+/* ID Card Content Styling */
+.id-card-content {
+    color: white;
+    width: 100%;
+}
+
+.id-card-content h3 {
+    color: #ffcc00;
+    margin-bottom: 5px;
+    font-size: 26px;
+    border-bottom: 1px solid rgba(255, 204, 0, 0.3);
+    padding-bottom: 10px;
+}
+
+.id-card-content p {
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+
+.id-card-content .profile-pic {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-bottom: 15px;
+    border: 3px solid #ffcc00;
+    box-shadow: 0 0 10px rgba(255, 204, 0, 0.5);
+}
+
+.id-card-content .contact-info {
+    margin-top: 20px;
+    font-size: 14px;
+}
+
+.id-card-content .contact-info a {
+    display: block;
+    margin-bottom: 5px;
+    color: #ffcc00;
+    font-weight: normal;
+}
+
+/* Form on Back of Card Styling */
+.card-back .contact-form-inner {
+    width: 100%;
+    text-align: left;
+    margin-top: 10px; /* Space from heading */
+}
+
+.card-back .contact-form-inner h4 {
+    color: #ffcc00;
+    margin-bottom: 15px;
+    text-align: center;
+    font-size: 22px;
+}
+
+.card-back .contact-form-inner label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+    color: #ccc;
+    font-size: 14px;
+}
+
+.card-back .contact-form-inner input[type="text"],
+.card-back .contact-form-inner input[type="email"],
+.card-back .contact-form-inner textarea {
+    width: calc(100% - 20px); /* Adjust for padding */
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #555;
+    border-radius: 5px;
+    background-color: #222;
+    color: white;
+    font-family: 'Poppins', sans-serif;
+    font-size: 14px;
+}
+
+.card-back .contact-form-inner input[type="text"]:focus,
+.card-back .contact-form-inner input[type="email"]:focus,
+.card-back .contact-form-inner textarea:focus {
+    outline: none;
+    border-color: #ffcc00;
+    box-shadow: 0 0 5px rgba(255, 204, 0, 0.5);
+}
+
+.card-back .contact-form-inner textarea {
+    resize: vertical;
+    min-height: 80px;
+}
+
+.card-back .contact-form-inner button {
+    background: #ffcc00;
+    color: black;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background 0.3s ease-in-out;
+    width: 100%; /* Make button full width */
+    margin-top: 10px;
+}
+
+.card-back .contact-form-inner button:hover {
+    background: #ff9900;
+}
+
+/* Close Card Button */
+.close-card {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    color: white;
+    font-size: 35px;
+    cursor: pointer;
+    background: none;
+    border: none;
+    padding: 0;
+    z-index: 1001; /* Above the card and its content */
+    transition: color 0.3s ease;
+}
+
+.close-card:hover {
+    color: #ffcc00;
 }
 
 /* Hide the direct email link when the card is active */
@@ -294,67 +361,92 @@ a:hover {
     <p>Contact: <a href="mailto:melvin.bt09@icloud.com">melvin.bt09@icloud.com</a></p>
 
     <div class="contact-button-wrapper">
-        <button id="contactMeBtn">Contact Melvin</button>
+        <button id="contactMeBtn">Interactive Contact Card</button>
     </div>
 </div>
 
-<div id="interactiveCard">
+<div class="flippable-card-container" id="flippableCardContainer">
     <button class="close-card" id="closeCardBtn">&times;</button>
-    <div class="card-content">
-        <h3>Get In Touch!</h3>
-        <p>Feel free to reach out to me via email or connect on social media:</p>
-
-        <p><strong>Email:</strong> <a href="mailto:melvin.bt09@icloud.com" style="color: #ffcc00;">melvin.bt09@icloud.com</a></p>
-
-        <div class="contact-form" style="margin-top: 20px; border-top: none;">
-            <h4>Send a Quick Message:</h4>
-            <form action="https://formspree.io/f/YOUR_FORMSPREE_CODE" method="POST">
-                <label for="card-name">Name:</label>
-                <input type="text" id="card-name" name="name" required>
-
-                <label for="card-email">Email:</label>
-                <input type="email" id="card-email" name="email" required>
-
-                <label for="card-message">Message:</label>
-                <textarea id="card-message" name="message" required></textarea>
-
-                <button type="submit">Send Message</button>
-            </form>
-        </div>
-
-        <div class="social-icons">
-            <a href="https://instagram.com/blu.erries" target="_blank" title="Instagram">📸</a>
-            <a href="https://www.linkedin.com/in/melvin-binesh-9080a22a3/" target="_blank" title="LinkedIn">🔗</a>
+    <div class="flippable-card" id="flippableCard">
+        <div class="card-face card-front">
+            <div class="id-card-content">
+                <img src="https://i.imgur.com/your-profile-pic.jpg" alt="Melvin Binesh Profile" class="profile-pic">
+                <h3>Melvin Binesh</h3>
+                <p><strong>Photographer & IT Enthusiast</strong></p>
+                <p>Always seeking new perspectives through the lens and exploring the frontiers of technology.</p>
+                <div class="contact-info">
+                    <p><strong>Connect with me:</strong></p>
+                    <a href="mailto:melvin.bt09@icloud.com">melvin.bt09@icloud.com</a>
+                    <a href="https://instagram.com/blu.erries" target="_blank">Instagram: @blu.erries</a>
+                    <a href="https://www.linkedin.com/in/your-linkedin-profile/" target="_blank">LinkedIn Profile</a>
+                    </div>
             </div>
+        </div>
+        <div class="card-face card-back">
+            <div class="contact-form-inner">
+                <h4>Send Melvin a Message:</h4>
+                <form action="https://formspree.io/f/YOUR_FORMSPREE_CODE" method="POST">
+                    <label for="form-name">Your Name:</label>
+                    <input type="text" id="form-name" name="name" required>
+
+                    <label for="form-email">Your Email:</label>
+                    <input type="email" id="form-email" name="email" required>
+
+                    <label for="form-message">Your Message:</label>
+                    <textarea id="form-message" name="message" required></textarea>
+
+                    <button type="submit">Send Message</button>
+                </form>
+            </div>
+        </div>
     </div>
 </div>
 
 <script>
     const contactMeBtn = document.getElementById('contactMeBtn');
-    const interactiveCard = document.getElementById('interactiveCard');
+    const flippableCardContainer = document.getElementById('flippableCardContainer');
+    const flippableCard = document.getElementById('flippableCard');
     const closeCardBtn = document.getElementById('closeCardBtn');
     const overlay = document.getElementById('overlay');
-    const mainContainer = document.getElementById('mainContainer'); // Reference to the main content container
+    const mainContainer = document.getElementById('mainContainer');
 
     // Function to open the card
     function openCard() {
-        interactiveCard.classList.add('active');
+        flippableCardContainer.classList.add('active');
         overlay.classList.add('active');
-        // Add a class to the main container to optionally hide/dim its content
-        mainContainer.classList.add('card-active');
+        mainContainer.classList.add('card-active'); // To dim/hide main content
     }
 
     // Function to close the card
     function closeCard() {
-        interactiveCard.classList.remove('active');
-        overlay.classList.remove('active');
-        mainContainer.classList.remove('card-active');
+        // Ensure card is reset to front face when closed
+        if (flippableCard.classList.contains('is-flipped')) {
+            flippableCard.classList.remove('is-flipped');
+            // Small delay to allow flip animation to start before closing
+            setTimeout(() => {
+                flippableCardContainer.classList.remove('active');
+                overlay.classList.remove('active');
+                mainContainer.classList.remove('card-active');
+            }, 500); // Match or slightly less than flip transition duration
+        } else {
+            flippableCardContainer.classList.remove('active');
+            overlay.classList.remove('active');
+            mainContainer.classList.remove('card-active');
+        }
     }
 
-    // Event listener for the "Contact Melvin" button
+    // Event listener for the "Interactive Contact Card" button
     contactMeBtn.addEventListener('click', openCard);
 
-    // Event listener for the close button inside the card
+    // Event listener to flip the card when the card itself is clicked
+    // Only flip if the target is not an input, textarea, or button (to allow form interaction)
+    flippableCard.addEventListener('click', function(event) {
+        if (!event.target.matches('input, textarea, button, a')) {
+            flippableCard.classList.toggle('is-flipped');
+        }
+    });
+
+    // Event listener for the close button
     closeCardBtn.addEventListener('click', closeCard);
 
     // Event listener for clicking on the overlay to close the card
@@ -362,20 +454,10 @@ a:hover {
 
     // Optional: Close card with Escape key
     document.addEventListener('keydown', function(event) {
-        if (event.key === 'Escape' && interactiveCard.classList.contains('active')) {
+        if (event.key === 'Escape' && flippableCardContainer.classList.contains('active')) {
             closeCard();
         }
     });
-
-    // Handle form submission (Optional, if using client-side validation/feedback)
-    // const cardForm = document.querySelector('#interactiveCard form');
-    // cardForm.addEventListener('submit', function(e) {
-    //     // e.preventDefault(); // Prevent default form submission for now
-    //     // You would typically handle AJAX submission here
-    //     // alert('Form submitted! (This is a placeholder, actual submission needs backend)');
-    //     // Optionally close the card after submission feedback
-    //     // closeCard();
-    // });
 
 </script>
 
