--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@ a:hover {
     <p>Contact: <a href="mailto:melvin.bt09@icloud.com">melvin.bt09@icloud.com</a></p>
 
     <div class="contact-button-wrapper">
-        <button id="contactMeBtn">Interactive Contact Card</button>
+        <button id="contactMeBtn">Contact Card</button>
     </div>
 </div>
 
@@ -370,7 +370,7 @@ a:hover {
     <div class="flippable-card" id="flippableCard">
         <div class="card-face card-front">
             <div class="id-card-content">
-                <img src="https://i.imgur.com/your-profile-pic.jpg" alt="Melvin Binesh Profile" class="profile-pic">
+                <img src="https://i.imgur.com/iqXuZKF.jpeg" alt="Melvin Binesh Profile" class="profile-pic">
                 <h3>Melvin Binesh</h3>
                 <p><strong>Photographer & IT Enthusiast</strong></p>
                 <p>Always seeking new perspectives through the lens and exploring the frontiers of technology.</p>
@@ -385,7 +385,7 @@ a:hover {
         <div class="card-face card-back">
             <div class="contact-form-inner">
                 <h4>Send Melvin a Message:</h4>
-                <form action="https://formspree.io/f/YOUR_FORMSPREE_CODE" method="POST">
+                <form action="https://formspree.io/f/meozgpad" method="POST">
                     <label for="form-name">Your Name:</label>
                     <input type="text" id="form-name" name="name" required>
 
