--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" href="https://i.imgur.com/ZtBuYfR.png" type="image/x-icon">
+    <link rel="icon" href="https://i.imgur.com/2CDEJcU.png" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Melvin</title>
@@ -10,13 +10,13 @@
 /* General Body & Container Styles */
 body {
     font-family: 'Poppins', sans-serif;
-    background-image: url('https://i.imgur.com/Hog0EKH.jpeg');
-    background-size: cover;
-    background-position: center;
+    background-image: url('https://i.imgur.com/HD8SlMa.jpeg');
+    background-size: cover; /* This is the key for full coverage */
+    background-position: center; /* This helps center the image */
     color: white;
     text-align: center;
-    padding: 20px;
-    min-height: 100vh;
+    padding: 20px; /* You had this padding */
+    min-height: 100vh; /* Ensures the body covers the full viewport height */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -370,7 +370,7 @@ a:hover {
     <div class="flippable-card" id="flippableCard">
         <div class="card-face card-front">
             <div class="id-card-content">
-                <img src="https://i.imgur.com/iqXuZKF.jpeg" alt="Melvin Binesh Profile" class="profile-pic">
+                <img src="https://i.imgur.com/nQibGrn.jpeg" alt="Melvin Binesh Profile" class="profile-pic">
                 <h3>Melvin Binesh</h3>
                 <p><strong>Photographer & IT Enthusiast</strong></p>
                 <p>Always seeking new perspectives through the lens and exploring the frontiers of technology.</p>
@@ -378,7 +378,6 @@ a:hover {
                     <p><strong>Connect with me:</strong></p>
                     <a href="mailto:melvin.bt09@icloud.com">melvin.bt09@icloud.com</a>
                     <a href="https://instagram.com/blu.erries" target="_blank">Instagram: @blu.erries</a>
-                    <a href="https://www.linkedin.com/in/your-linkedin-profile/" target="_blank">LinkedIn Profile</a>
                     </div>
             </div>
         </div>
